--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./login.css">
-    <script src="auth.js" defer></script>
+    <script src="login.js" defer></script>
 	</head>
     <body>
         <header>
@@ -26,10 +26,8 @@
         <main>
             <section>
                 <h2>log In</h2>
-                <div id="errors">
-                </div>
+                <div id="errors"></div>
                 <form id="form-login">
-                    <p id="error-message"></p>
                     <label for="email">E-mail</label>
                     <input type="email" name="email" id="login-email" required>
                     <label for="password">Mot de passe </label>
