--- a/login.html
+++ b/login.html
@@ -15,7 +15,11 @@
             <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
                 <nav>
                     <ul>
-                        <li>projets</li>
+                        <li>
+                            <a id="projects" href="index.html">
+                                projets
+                            </a>
+                        </li>
                         <li>contact</li>
                         <li>login</li>
                         <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
