--- a/index.html
+++ b/index.html
@@ -1,93 +1,138 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-	<meta charset="UTF-8">
-	<title>Sophie Bluel - Architecte d'intérieur</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
-	<meta name="description" content="">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer">
-	<link rel="stylesheet" href="./assets/style.css">
-	<link rel="stylesheet" href="modal.css">
-	<script src="app.js" defer></script>
-	<script src="modal.js" defer></script>
-</head>
-<body>
-<header>
-	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
-	<nav>
-		<ul>
-			<li>
-				<a id="projects" href="index.html">
-					projets
-				</a>
-			</li>
-			<li>contact</li>
-			<li>
-			 <a id="login" href="login.html">login</a> 
-			</li>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
-		</ul>
-	</nav>
-</header>
-<main>
-	<section id="introduction">
-		<figure>
-			<img src="./assets/images/sophie-bluel.png" alt="">
-		</figure>
-		<article>
-			<h2>Designer d'espace</h2>
-			<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
-			<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
-			<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
-		</article>
-	</section>
-	<section id="portfolio">
-		<div id="header" class="modification-add"> 
-			<h2>Mes Projets</h2>
-		</div>
-		
-	</section>
-	<section id="contact">
-		<h2>Contact</h2>
-		<p>Vous avez un projet ? Discutons-en !</p>
-		<form action="#" method="post">
-			<label for="name">Nom</label>
-			<input type="text" name="name" id="name">
-			<label for="email">Email</label>
-			<input type="email" name="email" id="email">
-			<label for="message">Message</label>
-			<textarea name="message" id="message" cols="30" rows="10"></textarea>
-			<input type="submit" value="Envoyer">
-		</form>
-	</section>
-<!-- modal-content -->
-	<aside id="modal-content" class="modal-content">
-		<div class="modal">
-			<span>
-				<i class="fa-solid fa-xmark fa-lg"></i>
-			</span>
-			<h3 class="text-modal">Galerie photo</h3>
-			<div class="portfolio-modal">
-				
-			</div>
-			<!-- <hr ALIGN=RIGHT WIDTH="40%"> -->
-			<button class="btn-modal">Ajouter une photo</button>
-		</div>
-	</aside>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Sophie Bluel - Architecte d'intérieur</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <meta name="description" content="" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="modal.css" />
+    <script src="edition.js" defer></script>
+    <script src="auth.js" defer></script>
+    <script src="api-utils.js" defer></script>
+    <script src="works.js" defer></script>
+    <script src="filters.js" defer></script>
+    <script src="portfolio.js" defer></script>
+    <script src="main.js" defer></script>
+    <script src="modal.js" defer></script>
+  </head>
+  <body>
+    <header>
+      <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+      <nav>
+        <ul>
+          <li>
+            <a id="projects" href="index.html"> projets </a>
+          </li>
+          <li>contact</li>
+          <li>
+            <a id="login" href="login.html">login</a>
+          </li>
+          <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section id="introduction">
+        <figure>
+          <img src="./assets/images/sophie-bluel.png" alt="" />
+        </figure>
+        <article>
+          <h2>Designer d'espace</h2>
+          <p>
+            Je raconte votre histoire, je valorise vos idées. Je vous accompagne
+            de la conception à la livraison finale du chantier.
+          </p>
+          <p>
+            Chaque projet sera étudié en commun, de façon à mettre en valeur les
+            volumes, les matières et les couleurs dans le respect de l’esprit
+            des lieux et le choix adapté des matériaux. Le suivi du chantier
+            sera assuré dans le souci du détail, le respect du planning et du
+            budget.
+          </p>
+          <p>
+            En cas de besoin, une équipe pluridisciplinaire peut-être constituée
+            : architecte DPLG, décorateur(trice)
+          </p>
+        </article>
+      </section>
+      <section id="portfolio">
+        <div id="header" class="modification-add">
+          <h2>Mes Projets</h2>
+        </div>
+      </section>
+      <section id="contact">
+        <h2>Contact</h2>
+        <p>Vous avez un projet ? Discutons-en !</p>
+        <form action="#" method="post">
+          <label for="name">Nom</label>
+          <input type="text" name="name" id="name" />
+          <label for="email">Email</label>
+          <input type="email" name="email" id="email" />
+          <label for="message">Message</label>
+          <textarea name="message" id="message" cols="30" rows="10"></textarea>
+          <input type="submit" value="Envoyer" />
+        </form>
+      </section>
+      <!-- modal-content -->
+      <aside id="modal-content" class="modal-content">
+        <div id="home-step" class="modal">
+          <div>
+            <span>
+              <i id="close-home" class="fa-solid fa-xmark"></i>
+            </span>
+            <h3 class="text-modal">Galerie photo</h3>
+          </div>
 
-</main>
+          <div class="portfolio-modal"></div>
+          <!-- <hr ALIGN=RIGHT WIDTH="40%"> -->
+          <button id="btn-add-work" class="btn-modal">Ajouter une photo</button>
+        </div>
+        <!-- modale-add-img -->
+        <div id="add-step" class="modalAddImg">
+          <span><i id="btn-go-home" class="fa-solid fa-arrow-left"></i></span>
+          <span><i id="close-add-work" class="fa-solid fa-xmark"></i></span>
+          <h3 class="text-modal">Ajout photo</h3>
+          <form>
+            <div class="containerFiless">
+              <div class="containerFile">
+                <span><i class="fa-regular fa-image"></i></span>
+                <label for="file">+Ajouter photo</label>
+                <input  type="file" id="file" name="imageUrl" />
+                <img src="#" alt="Aperçut de l'image" />
+                <p>jpg,png: 4 mo max</p>
+              </div>
+              <label class="labeltitle" for="title">Titre</label>
+              <input class="inputtext" type="text" id="title" name="title" />
+              <label class="labelcategory" for="category">Catégorie</label>
+              <select name="categoryId" id="category"></select>
+              <hr class="sc-ikZpkk jTSEgo MuiDivider-root MuiDivider-fullWidth">
+              <button class="button" disabled>Valider</button>
+            </div>
+          </form>
+        </div>
+      </aside>
+    </main>
 
-<footer>
-	<nav>
-		<ul>
-			<li>Mentions Légales</li>
-		</ul>
-	</nav>
-</footer>
-</body>
+    <footer>
+      <nav>
+        <ul>
+          <li>Mentions Légales</li>
+        </ul>
+      </nav>
+    </footer>
+  </body>
 </html>
