add some comments / optimazation

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </li>
           <li>contact</li>
           <li>
-            <a id="login" href="login.html">login</a>
+            <a id="login">login</a>
           </li>
           <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
@@ -98,7 +98,7 @@
           <!-- <hr ALIGN=RIGHT WIDTH="40%"> -->
           <button id="btn-add-work" class="btn-modal">Ajouter une photo</button>
         </div>
-        <!-- modale-add-img -->
+        <!-- modal-add-img -->
         <div id="add-step" class="modalAddImg">
           <span><i id="btn-go-home" class="fa-solid fa-arrow-left"></i></span>
           <span><i id="close-add-work" class="fa-solid fa-xmark"></i></span>
