reorganize  structure of project css/js

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./assets/style.css" />
-    <link rel="stylesheet" href="modal.css" />
-    <script src="api-utils.js" defer></script>
-    <script src="user.js" defer></script>
-    <script src="portfolio.js" defer></script>
-    <script src="main.js" defer></script>
-    <script src="modal.js" defer></script>
+    <link rel="stylesheet" href="./assets/style/index.css" />
+    <link rel="stylesheet" href="./assets/style/modal.css" />
+    <script src="./js/api-utils.js" defer></script>
+    <script src="./js/user.js" defer></script>
+    <script src="./js/portfolio.js" defer></script>
+    <script src="./js/main.js" defer></script>
+    <script src="./js/modal.js" defer></script>
   </head>
   <body>
     <header>
