--- a/login.html
+++ b/login.html
@@ -7,8 +7,8 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./login.css">
-    <script src="login.js" defer></script>
+    <link rel="stylesheet" href="./assets/style/login.css">
+    <script src="./js/login.js" defer></script>
 	</head>
     <body>
         <header>
